Revert "CFP-1723 Add Healthz endpoint under api/healthz"
This reverts commit a9a24d7fcd1541a8b4a1206220c40714b3cf62f6.
